src/variables.scss
$primary-color: #462A7A;
$secondary-color: #C792EA;
$tertiary-color: #892A93;
$background-color: #f2e6f9;
$accent-color: #FCFF80;

$black-color: #222;
$white-color: #fafafa;

$small-device-width: 1080px;
$small-device-height: 900px;

// Based on most used screen resolution in 2025:
// Mobile: from 360x640 to 430x932
// Tablet: from 768x1024 to 1280x800
// Desktop: from 1280x720 to 2560x1440
$mobile-device-min-width: 359px;
$mobile-device-max-width: 431px;

